--- a/pc_mappa.json
+++ b/pc_mappa.json
@@ -1,4 +1,66 @@
 [
-    {"nome": "PCOFFICINA1F", "x": 140.5, "y": 1106},
-    {"nome": "PCVIDEOCAMERE2F", "x": 1200, "y": 600}
+    {"nome": "PCMCORELLIF", "x": null, "y": null},
+    {"nome": "PCOFFICINA1F", "x": null, "y": null},
+    {"nome": "PCOFFICINA2F", "x": null, "y": null},
+    {"nome": "PCOFFICINA3F", "x": null, "y": null},
+    {"nome": "PCOFFICINAF", "x": null, "y": null},
+    {"nome": "PCVIDEOCAMERE2F", "x": null, "y": null},
+    {"nome": "PCSCARICOVIVOF", "x": null, "y": null},
+    {"nome": "PCVETERINARI2F", "x": null, "y": null},
+    {"nome": "PCSCARICOVIVO2F", "x": null, "y": null},
+    {"nome": "PCVIDEOCAMERE1F", "x": null, "y": null},
+    {"nome": "PCBOLLE2F", "x": null, "y": null},
+    {"nome": "PCBOLLE1F", "x": null, "y": null},
+    {"nome": "PCCARPROSCIUTTF", "x": null, "y": null},
+    {"nome": "PCCARTONI2F", "x": null, "y": null},
+    {"nome": "PCPROSCIUTTI2F", "x": null, "y": null},
+    {"nome": "PCPROSCIUTTIF", "x": null, "y": null},
+    {"nome": "PCCONTRCELLEF", "x": null, "y": null},
+    {"nome": "PCSUINOATERRA2F", "x": null, "y": null},
+    {"nome": "PCFRATTASVF", "x": null, "y": null},
+    {"nome": "PCCARTONIF", "x": null, "y": null},
+    {"nome": "PCPOLLOF", "x": null, "y": null},
+    {"nome": "PCCELLAPOLLO1F", "x": null, "y": null},
+    {"nome": "PCPRELCELLA34F", "x": null, "y": null},
+    {"nome": "PCCELLAPOLLO2F", "x": null, "y": null},
+    {"nome": "PCSUINOATERRA1F", "x": null, "y": null},
+    {"nome": "PCTRASFERIMENTF", "x": null, "y": null},
+    {"nome": "PCSPEDMON2F", "x": null, "y": null},
+    {"nome": "PCBOVINOAPPES1F", "x": null, "y": null},
+    {"nome": "PCBOVINOAPPES2F", "x": null, "y": null},
+    {"nome": "PCBOVINOATERRAF", "x": null, "y": null},
+    {"nome": "PCSPEDMON1F", "x": null, "y": null},
+    {"nome": "PCBOVINOINGR1F", "x": null, "y": null},
+    {"nome": "PCBOVINOINGR2F", "x": null, "y": null},
+    {"nome": "PCBOVINOINGR3F", "x": null, "y": null},
+    {"nome": "PCBOVINOTERRA2F", "x": null, "y": null},
+    {"nome": "PCSALASFASCIO3F", "x": null, "y": null},
+    {"nome": "PCSFAPANF", "x": null, "y": null},
+    {"nome": "PCSALASFASCIO2F", "x": null, "y": null},
+    {"nome": "PCSALASFASCIOF", "x": null, "y": null},
+    {"nome": "PCPRELCELLA14F", "x": null, "y": null},
+    {"nome": "PCFRATTAGLIE1F", "x": null, "y": null},
+    {"nome": "PCFRATTATERRA1F", "x": null, "y": null},
+    {"nome": "PCCORRIDOIO1F", "x": null, "y": null},
+    {"nome": "PCSUINOAPPESOF", "x": null, "y": null},
+    {"nome": "PCPRELCORBOVF", "x": null, "y": null},
+    {"nome": "PCBOVINOAPPES3F", "x": null, "y": null},
+    {"nome": "PCINDISOSSO2F", "x": null, "y": null},
+    {"nome": "PCINDISOSSO1F", "x": null, "y": null},
+    {"nome": "PCDISOSSO2F", "x": null, "y": null},
+    {"nome": "PCDISOSSOF", "x": null, "y": null},
+    {"nome": "PCSALSICCIA4F", "x": null, "y": null},
+    {"nome": "PCSALSICCIA3F", "x": null, "y": null},
+    {"nome": "PCSOTTOPRODF", "x": null, "y": null},
+    {"nome": "PCPATOSUINEF", "x": null, "y": null},
+    {"nome": "PCVALUTSUINOF", "x": null, "y": null},
+    {"nome": "PCPRENOTAMEZZF", "x": null, "y": null},
+    {"nome": "PCPATOBOVINEF", "x": null, "y": null},
+    {"nome": "PCGABBIAF", "x": null, "y": null},
+    {"nome": "PCVALUTBOVINO1F", "x": null, "y": null},
+    {"nome": "PCMAGAZZINOSVF", "x": null, "y": null},
+    {"nome": "PCCONGELOF", "x": null, "y": null},
+    {"nome": "PCNFAENZAF", "x": null, "y": null},
+    {"nome": "PCTRIPPERIAF", "x": null, "y": null},
+    {"nome": "PCPELLIBOVF", "x": null, "y": null}
 ]
